--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -10,6 +10,8 @@ group :jekyll_plugins do
   gem "jekyll-remote-theme", "~> 0.4"
   gem "jekyll-seo-tag", "~> 2.8"
   gem "jekyll-include-cache", "~> 0.2"
+  gem "base64"
+  gem "bigdecimal"
 end
 gem "kramdown-parser-gfm", "~> 1.1"
 gem "rake", "~> 13.2"
